# Separation-Agents

./: .gitignore  AGENTS.md  LICENSE  README.md  demo_equilibrium.ipynb  generate_notebook.py  pyproject.toml  start_notebook.sh
.gemini/: settings.json
Notebooks/: CompressibleFlowAgent.ipynb  IDAESMetalFuelCycle.ipynb  README.md  SepAgentDevelopment.ipynb
Paper/: paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
benchmarks/: benchmark_ree_precipitation.py  benchmark_sx_cascade.py  results.md
docs/: eaf_slag_valorization_report.aux  eaf_slag_valorization_report.out  eaf_slag_valorization_report.tex  eaf_steel_slag_valorization_report.aux  eaf_steel_slag_valorization_report.out  eaf_steel_slag_valorization_report.tex  eaf_steel_slag_valorization_report.toc  eagle_mine_valorization_report.out  eagle_mine_valorization_report.toc  gaps_limitations.md  index.md  olivine_feed_characterization.yaml  steel_slag_valorization_presentation.aux  steel_slag_valorization_presentation.nav  steel_slag_valorization_presentation.out  steel_slag_valorization_presentation.tex  steel_slag_valorization_presentation.toc  steel_slag_valorization_report.aux  steel_slag_valorization_report.out  steel_slag_valorization_report.tex  steel_slag_valorization_report.toc  technical_report.md  tutorial.md
examples/: README.md  agent_workflow_demo.py  eaf_steel_slag_valorization.yaml  eagle_creek_valorization.py  eagle_creek_valorization.yaml  eo_quickstart.py  jax_cost_sensitivity.py  monazite_ree_flowsheet.yaml  ree_leach_minimal.yaml  round_top_cost_estimate.py  (+3 more)
scripts/: README.md  (+18 more)
(+173 files in other folders)
